--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   font_awesome_flutter: ^8.12.0
   url_launcher: 5.7.4
   flutter_launcher_icons: 0.8.1
+  geolocator: 6.2.1
+  twilio_flutter: 0.0.5
+  shared_preferences: 0.5.8
 
 dev_dependencies:
   flutter_test:
