--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geolocator: 6.2.1
   twilio_flutter: 0.0.5
   shared_preferences: 0.5.8
+  flutter_dotenv: 3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   assets:
     - assets/mobilefacenet.tflite
     - assets/logo.png
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
