--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   twilio_flutter: 0.0.5
   shared_preferences: 0.5.8
   flutter_dotenv: 3.1.0
+  flutter_local_notifications: ^4.0.1+2
 
 dev_dependencies:
   flutter_test:
